# ChangeLog for app-portage/profuse
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/profuse/Attic/ChangeLog,v 1.34 2005/06/27 07:18:48 corsair Exp $

  27 Jun 2005; Markus Rothe <corsair@gentoo.org> profuse-0.23.0.ebuild:
  Stable on ppc64

  23 Jun 2005; <dams@gentoo.org> profuse-0.23.0.ebuild:
  removed useless line in ebuild

  20 Jun 2005; <dams@gentoo.org> profuse-0.23.0.ebuild:
  corrected deps

*profuse-0.23.0 (20 Jun 2005)

  20 Jun 2005; <dams@gentoo.org> +profuse-0.23.0.ebuild:
  new version

  11 Jun 2005; <dams@gentoo.org> profuse-0.20.3.ebuild,
  profuse-0.22.1.ebuild:
  added ~amd64 and removed it from broken ebuild

  06 Jun 2005; Markus Rothe <corsair@gentoo.org> profuse-0.22.1.ebuild:
  Added ~ppc64

  02 Jun 2005; <dams@gentoo.org> profuse-0.22.0.ebuild,
  profuse-0.22.0-r1.ebuild:
  masking broken versions

*profuse-0.22.1 (02 Jun 2005)

  02 Jun 2005; <dams@gentoo.org> +profuse-0.22.1.ebuild:
  new version

*profuse-0.22.0-r1 (02 Jun 2005)

  02 Jun 2005; <dams@gentoo.org> +profuse-0.22.0-r1.ebuild:
  new release for the dependance on gtk2-fu-0.08

  02 Jun 2005; <dams@gentoo.org> profuse-0.22.0.ebuild:
  depends on gtk2-fu-0.0.8, because of the progressbar

*profuse-0.14 (02 Jun 2005)

  02 Jun 2005; <dams@gentoo.org> +profuse-0.14.ebuild,
  profuse-0.22.0.ebuild:
  readded 0.14, stable on ppc64

  02 Jun 2005; <dams@gentoo.org> -profuse-0.14.ebuild,
  profuse-0.22.0.ebuild:
  changed description, stable on x86 and ppc

  02 Jun 2005; <dams@gentoo.org> -profuse-0.14.ebuild,
  profuse-0.22.0.ebuild:
  removed obsolette -0.14

*profuse-0.22.0 (02 Jun 2005)

  02 Jun 2005; <dams@gentoo.org> +profuse-0.22.0.ebuild:
  new version, search feature in ncurses

  13 May 2005; Sven Wegener <swegener@gentoo.org> profuse-0.21.0.ebuild:
  Fixed invalid atoms in *DEPEND.

*profuse-0.21.0 (13 May 2005)

  13 May 2005; <dams@gentoo.org> +profuse-0.21.0.ebuild:
  version bump, console versions