@@ -1,25 +1,7 @@
-MD5 a245732a9ecb931afb161fad9005e186 ChangeLog 4015
-MD5 5f1c3b9a62f513d6a4802b57677c23bf metadata.xml 284
-MD5 ecd55dba8a24301cd2594dee521412dd profuse-0.1.ebuild 682
-MD5 283990470145dd88c12d3311b4a1f604 profuse-0.11.ebuild 668
-MD5 9e2955500d68a0d1bb675d93fff898be profuse-0.12.ebuild 668
-MD5 c306ab9e4985e861dec746f41ec60fe7 profuse-0.13.ebuild 668
-MD5 a6185c1330bd58d22a0248860d20b62d profuse-0.14.ebuild 668
-MD5 90118e249805091a4a756c82ada8160c profuse-0.15.ebuild 662
-MD5 66c8dff7e0a1a6e7575f147641989adb profuse-0.16.ebuild 662
-MD5 06d20ae451f058acc43a22876982edfa profuse-0.17.ebuild 662
-MD5 7d29f31bc7db1e64149f3bc393c1056d profuse-0.18.1.ebuild 665
-MD5 3d20d4745ff9325f42d9e034c9c6717e profuse-0.18.ebuild 663
-MD5 e7ed070d85d5df51a362b53f2685dce0 profuse-0.20.1.ebuild 665
-MD5 653faa345279f68a0912dd967b66e253 profuse-0.20.2-r1.ebuild 668
-MD5 1302f79766d3d30af9aafffd84170e1a profuse-0.20.2.ebuild 665
-MD5 d0e0180fc3e72c40cc7d7dd80471766b profuse-0.20.3.ebuild 658
-MD5 4e88fb5f4ba390a10ea4b04e94de83ed profuse-0.20.ebuild 663
-MD5 f859fa10ebca131244fabc77e8056f4f profuse-0.21.0.ebuild 787
-MD5 623f98ee7cb50c9fca78266319302b02 profuse-0.22.0-r1.ebuild 793
-MD5 9633bf40f5b44bdebfa8719e23b6e5ad profuse-0.22.0.ebuild 790
-MD5 9db9dd1f0045deeda3186b4289afb31d profuse-0.22.1.ebuild 816
-MD5 f541ccb3c17d6663f776ebed97a5b778 profuse-0.23.0.ebuild 798
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 0acc78d704ac6b94db896fac3d1a873d ChangeLog 4181
 MD5 6ea98f01c28703bf36ccf141519518d2 files/digest-profuse-0.1 62
 MD5 6382a08f07553fe4ffe9297e2ab85632 files/digest-profuse-0.11 64
 MD5 56089f6fb4c0ff287512cbf3f56031e2 files/digest-profuse-0.12 64
@@ -40,3 +22,31 @@ MD5 c5ac74f5d15582c4449be498824e9d8c files/digest-profuse-0.22.0 66
 MD5 c5ac74f5d15582c4449be498824e9d8c files/digest-profuse-0.22.0-r1 66
 MD5 63b3d95b090e835ea4c9250bccf07072 files/digest-profuse-0.22.1 66
 MD5 fffc28214b2afa2ce918a0608c4e057b files/digest-profuse-0.23.0 66
+MD5 5f1c3b9a62f513d6a4802b57677c23bf metadata.xml 284
+MD5 ecd55dba8a24301cd2594dee521412dd profuse-0.1.ebuild 682
+MD5 283990470145dd88c12d3311b4a1f604 profuse-0.11.ebuild 668
+MD5 9e2955500d68a0d1bb675d93fff898be profuse-0.12.ebuild 668
+MD5 c306ab9e4985e861dec746f41ec60fe7 profuse-0.13.ebuild 668
+MD5 a6185c1330bd58d22a0248860d20b62d profuse-0.14.ebuild 668
+MD5 90118e249805091a4a756c82ada8160c profuse-0.15.ebuild 662
+MD5 66c8dff7e0a1a6e7575f147641989adb profuse-0.16.ebuild 662
+MD5 06d20ae451f058acc43a22876982edfa profuse-0.17.ebuild 662
+MD5 7d29f31bc7db1e64149f3bc393c1056d profuse-0.18.1.ebuild 665
+MD5 3d20d4745ff9325f42d9e034c9c6717e profuse-0.18.ebuild 663
+MD5 e7ed070d85d5df51a362b53f2685dce0 profuse-0.20.1.ebuild 665
+MD5 653faa345279f68a0912dd967b66e253 profuse-0.20.2-r1.ebuild 668
+MD5 1302f79766d3d30af9aafffd84170e1a profuse-0.20.2.ebuild 665
+MD5 d0e0180fc3e72c40cc7d7dd80471766b profuse-0.20.3.ebuild 658
+MD5 4e88fb5f4ba390a10ea4b04e94de83ed profuse-0.20.ebuild 663
+MD5 f859fa10ebca131244fabc77e8056f4f profuse-0.21.0.ebuild 787
+MD5 a9cf72cad968b977b462889e54465570 profuse-0.22.0-r1.ebuild 798
+MD5 cb8386b38a3a2df15368e37291235bb3 profuse-0.22.0.ebuild 795
+MD5 fc275f52758b108dd18be62a7a261da0 profuse-0.22.1.ebuild 821
+MD5 f541ccb3c17d6663f776ebed97a5b778 profuse-0.23.0.ebuild 798
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.1 (GNU/Linux)
+
+iD8DBQFCwI+pI1lqEGTUzyQRAo2SAJ4kevKtA6PJzBWD4yqb09UtIT5UkACgykZ5
+kCLGAOhiDbwQfkkXFg9n71c=
+=iXzN
+-----END PGP SIGNATURE-----
