@@ -1,6 +1,10 @@
 # ChangeLog for app-portage/profuse
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/profuse/Attic/ChangeLog,v 1.34 2005/06/27 07:18:48 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/profuse/Attic/ChangeLog,v 1.35 2005/06/27 23:45:32 swegener Exp $
+
+  27 Jun 2005; Sven Wegener <swegener@gentoo.org> profuse-0.22.0.ebuild,
+  profuse-0.22.0-r1.ebuild, profuse-0.22.1.ebuild:
+  Fixed typo, !ppc64? instead of !ppc4?
 
   27 Jun 2005; Markus Rothe <corsair@gentoo.org> profuse-0.23.0.ebuild:
   Stable on ppc64
